Temporary hack to build pages from non-master (circumvent permission issue)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,5 +16,6 @@ pages:
   artifacts:
     paths:
     - public
-  only:
-  - master
+#  only:
+#  - master
+# ottok does not have permission to push on master, so build from other branch name..
