Revert "Temporary hack to build pages from non-master (circumvent permission issue)"
This reverts commit b26967df32c4f1012bde878478d608afc12b3656.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,5 @@ pages:
   artifacts:
     paths:
     - public
-#  only:
-#  - master
-# ottok does not have permission to push on master, so build from other branch name..
+  only:
+  - master
