Update baseurl to www.apparmor.net until apparmor.net cert is available
Currently the apparmor.net cert is not available and this is causing
parts of the site to be not encrypted. So change the base url
to www.apparmor.net because we have a cert for that.

Signed-off-by: John Johansen <john.johansen@canonical.com>

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://apparmor.net/"
+baseurl = "https://www.apparmor.net/"
 contentdir    = "content"
 layoutdir     = "layouts"
 publishdir    = "public"
