Revert "Update baseurl to www.apparmor.net until apparmor.net cert is available"
apparmor.net now has a cert, so we can use it as the baseurl.

This reverts commit c1c8776dd2f6ee8543b54451de344421d4af6ee2.
except it keeps https instead of reverting to http

Signed-off-by: John Johansen <john.johansen@canonical.com>

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://www.apparmor.net/"
+baseurl = "https://apparmor.net/"
 contentdir    = "content"
 layoutdir     = "layouts"
 publishdir    = "public"
