--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseurl = "https://apparmor.net/"
 contentdir    = "content"
 layoutdir     = "layouts"
 publishdir    = "public"
+staticDir     = "static"
 title = "AppArmor"
 canonifyurls  = true
 
